2007-07-09  J. Tang  <jtang@tresys.com>

	* Added additional sort constructors to libseaudit.

2007-07-05  J. Tang  <jtang@tresys.com>

	* seaudit now has a button to clear all messages from a view.
	This is useful when doing log monitoring, to show only new
	messages.

	* Added seaudit_model_hide_message(), to suppress display of
	certain messages within a model.

2007-06-28  J. Tang  <jtang@tresys.com>

	* Updated apol and sediffx to delay loading neverallow rules
	unless the user requested analyzing them.

2007-06-25  J. Tang  <jtang@tresys.com>

	* Updated apol(1) to use new libsefs

	* Updated replcon(1) to use new libsefs.

2007-06-19  J. Tang  <jtang@tresys.com>

	* Updated indexcon(1) to use new libsefs.

	* Merged searchcon(1) functionality into findcon(1); man pages
	updated.  searchcon(1) has been removed from SETools.

	* libsefs.so.4 is now wrapped by SWIG, for Python, Java, and
	Tcl.

	* Rewrite of libsefs to meet coding standards.  libsefs.so.4 is an
	object-oriented library that abstracts away filesystems,
	file_contexts files, and databases into a unified object that can
	be queried easily.

2007-06-18  J. Tang  <jtang@tresys.com>

	* libpoldiff/include/poldiff/rbac_diff.h: Added
	poldiff_role_allow_get_unmodified_roles().  The return values
	poldiff_role_allow_get_added_roles() and
	poldiff_role_allow_get_removed_roles() have been changed for forms
	POLDIFF_FORM_ADDED and POLDIFF_FORM_REMOVED.

2007-06-14  J. Tang  <jtang@tresys.com>

	* SETools can now compile against GTK+ 2.4.  Nonetheless, GTK+ 2.8
	is still the recommended toolkit.

2007-06-13  J. Tang  <jtang@tresys.com>

	* libseaudit/src/log.c (seaudit_log_clear): Added ability to clear
	a log of its messages.

2007-06-12  J. Tang  <jtang@tresys.com>

	* SETools now requires libsqlite3, version 3.2.0 or greater.  It
	used to ship with its own copy of sqlite3; that is no longer the
	case.

2007-06-11  M. Goldman  <mgoldman@tresys.com>